# pallet-eth2-light-client

./: .gitignore  Cargo.toml  README.md  flake.nix  rust-toolchain.toml
.github/: CODEOWNERS
.github/workflows/: validate_pr.yml
bug-hunt/: Cargo.toml
bug-hunt/src/: lib.rs
crates/bls/: Cargo.toml
crates/bls/src/: generic_aggregate_public_key.rs  generic_aggregate_signature.rs  generic_keypair.rs  generic_public_key.rs  generic_public_key_bytes.rs  generic_secret_key.rs  generic_signature.rs  generic_signature_bytes.rs  generic_signature_set.rs  get_withdrawal_credentials.rs  lib.rs  macros.rs  zeroize_hash.rs
crates/bls/src/impls/: blst.rs  fake_crypto.rs  milagro.rs  mod.rs
crates/bls/tests/: tests.rs
crates/consensus-types/: Cargo.toml
crates/consensus-types/src/: lib.rs  network_config.rs
crates/consensus_types/: Cargo.toml
crates/eth-rpc-client/: Cargo.toml  config_for_tests.toml
crates/eth-rpc-client/data/: .gitattributes
crates/eth-rpc-client/src/: beacon_block_body_merkle_tree.rs  beacon_rpc_client.rs  config_for_tests.rs  errors.rs  eth1_rpc_client.rs  execution_block_proof.rs  hand_made_finality_light_client_update.rs  lib.rs  utils.rs
crates/eth-types/: Cargo.toml
crates/eth-types/src/: eth2.rs  lib.rs  macros.rs  pallet.rs  primitives.rs
crates/eth2-contract-init/: Cargo.toml
crates/eth2-contract-init/src/: init_pallet.rs  main.rs
crates/eth2-hashing/: Cargo.toml
crates/eth2-hashing/src/: lib.rs
crates/eth2-pallet-init/: Cargo.toml  config_for_tests.toml
crates/eth2-pallet-init/metadata/: eth_light_client_runtime.scale  tangle-runtime.scale
crates/eth2-pallet-init/src/: config.rs  config_for_tests.rs  eth_client_pallet_trait.rs  eth_network.rs  init_pallet.rs  lib.rs  main.rs  misc.rs  substrate_network.rs  substrate_pallet_client.rs
crates/eth2_hashing/: Cargo.toml
crates/eth2_hashing/src/: lib.rs
crates/eth_rpc_client/: Cargo.toml
crates/eth_rpc_client/src/: beacon_block_body_merkle_tree.rs  beacon_rpc_client.rs  config_for_tests.rs  errors.rs  eth1_rpc_client.rs  execution_block_proof.rs  hand_made_finality_light_client_update.rs  lib.rs  light_client_snapshot_with_proof.rs  utils.rs
crates/finality-update-verify/: Cargo.toml  config_for_tests.toml
crates/finality-update-verify/src/: config_for_tests.rs  lib.rs  network_config.rs
crates/lc-relay-config/: Cargo.toml
crates/lc-relay-config/src/: lib.rs
crates/lc-relay-types/: Cargo.toml
crates/lc-relay-types/src/: lib.rs
crates/lc-relayer-context/: Cargo.toml
crates/lc-relayer-context/src/: lib.rs
crates/merkle-proof/: Cargo.toml
crates/merkle-proof/src/: lib.rs
crates/merkle_proof/: Cargo.toml
crates/merkle_proof/src/: lib.rs
crates/safe-arith/: Cargo.toml
crates/safe-arith/src/: iter.rs
crates/safe_arith/src/: iter.rs  lib.rs
crates/serde-utils/: Cargo.toml
crates/serde-utils/src/: fixed_bytes_hex.rs  hex.rs  quoted_int.rs  quoted_u64_vec.rs  u256_hex_be.rs  u64_hex_be.rs  u8_hex.rs
crates/serde_utils/: Cargo.toml
crates/serde_utils/src/: fixed_bytes_hex.rs  hex.rs  hex_vec.rs  json_str.rs  lib.rs  list_of_bytes_lists.rs  quoted_int.rs  quoted_u64_vec.rs  u256_hex_be.rs  u32_hex.rs  u64_hex_be.rs  u8_hex.rs
crates/ssz/: Cargo.toml
crates/ssz-derive/: Cargo.toml
crates/ssz-derive/src/: lib.rs
crates/ssz/examples/: large_list.rs  large_list_of_structs.rs  struct_definition.rs
crates/ssz/src/: decode.rs  encode.rs  legacy.rs  lib.rs  union_selector.rs
crates/ssz/src/decode/: impls.rs  try_from_iter.rs
crates/ssz/src/encode/: impls.rs
crates/ssz/tests/: tests.rs
crates/ssz_derive/src/: lib.rs
crates/tree-hash/: Cargo.toml
crates/tree-hash-derive/: Cargo.toml
crates/tree-hash-derive/src/: lib.rs
crates/tree-hash/src/: lib.rs  merkle_hasher.rs  merkleize_padded.rs  merkleize_standard.rs
crates/tree-hash/tests/: tests.rs
crates/tree_hash/: Cargo.toml
crates/tree_hash/src/: impls.rs  lib.rs  merkle_hasher.rs  merkleize_padded.rs  merkleize_standard.rs
crates/tree_hash_derive/src/: lib.rs
eth-types/: Cargo.toml
eth-types/src/: eth2.rs  lib.rs  macros.rs
eth2substrate-block-relay-rs/: Cargo.toml  config.toml  config_for_tests.toml
eth2substrate-block-relay-rs/src/: config.rs  config_for_tests.rs  contract_type.rs  eth2substrate_relay.rs  eth_client_pallet_trait.rs  last_slot_searcher.rs  lib.rs  logger.rs  prometheus_metrics.rs  substrate_pallet_client.rs  test_utils.rs
gadget/: Cargo.toml
gadget/cli/: Cargo.toml
gadget/cli/src/: lib.rs
gadget/config/: README.md
gadget/src/: errors.rs  lib.rs
metadata/: eth_light_client_runtime.scale  tangle-runtime.scale
node/: Cargo.toml
node/src/: benchmarking.rs  chain_spec.rs  cli.rs  command.rs  service.rs
pallet/: Cargo.toml
pallet/src/: consensus.rs  lib.rs  mock.rs  mocked_pallet_client.rs  test_utils.rs  tests.rs  traits.rs
pallet/src/data/goerli/: beacon_header_5258752.json  light_client_update_period_632.json  light_client_update_period_634.json  light_client_update_period_635.json
pallet/src/eth_types/: eth2.rs  macros.rs  mod.rs  pallet.rs
pallets/eth2-light-client/: Cargo.toml
pallets/eth2-light-client/runtime-api/: Cargo.toml
pallets/eth2-light-client/runtime-api/src/: lib.rs
pallets/eth2-light-client/src/: lib.rs  mock.rs  mocked_pallet_client.rs  test_utils.rs  tests.rs
pallets/eth2-light-client/src/data/goerli/: execution_blocks_8661554_8663908.json  light_client_update_period_633.json
pallets/light-proposals/: Cargo.toml
pallets/light-proposals/src/: lib.rs  mock.rs  tests.rs
pallets/light-verifier/: Cargo.toml
pallets/light-verifier/src/: lib.rs  mock.rs  tests.rs  verify.rs
primitives/: Cargo.toml
primitives/src/: lib.rs  traits.rs  types.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
scripts/: check_no_std.sh  run-local-light-client.sh
src/: consensus.rs  lib.rs  mock.rs  prover_utils.rs  test_utils.rs  tests.rs  traits.rs  types.rs
