[workspace]
members = [
    "pallets/*",
    "crates/*",
    "eth2substrate-block-relay-rs",
    "gadget",
    "gadget/cli",
    "node",
    "runtime",
]

[patch]
[patch.crates-io]
arbitrary = { git = "https://github.com/michaelsproul/arbitrary", rev="a572fd8743012a4f1ada5ee5968b1b3619c427ba" }

[workspace.dependencies]
ethereum-types = { version = "0.14.1", features = ["rlp", "serialize"] }
funty = "2.0.0"
anyhow = "1.0"
log = { version = "0.4", features = ["std", "serde"] }
serde_json = { version = "1.0.74", default-features = false }
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
clap = { version = "3.1.6", features = ["derive"] }
tokio = { version = "1.1", features = ["macros", "rt", "time"] }
env_logger = "0.9.0"
futures = { version = "0.3.21", default-features = false }
async-std = { version = "1.12.0", default-features = false }
hex = "*"
toml = "0.5.9"
atomic_refcell = "0.1.8"
bitvec = "*"
dotenv = "0.15.0"

prometheus = { version = "0.9", features = ["process"] }
lazy_static = "1.4"
warp = "0.2"
thread = "*"