[package]
name = "eth2_to_substrate_relay"
version = "0.1.0"
edition = "2021"

[dependencies]
types =  { git = "https://github.com/webb-tools/lighthouse.git", branch = "develop" }

webb-relayer-utils = { git = "https://github.com/webb-tools/relayer.git" }
eth-types = { path = "../crates/eth-types", features = ["eth2", "eip1559"] }
tree_hash = { path = "../crates/tree_hash" }
merkle_proof = { path = "../crates/merkle_proof" }
eth2_hashing = { path = "../crates/eth2_hashing" }
eth2_ssz = { path = "../crates/ssz" }
eth_rpc_client = { path = "../crates/eth_rpc_client" }
eth2-pallet-init = { path = "../crates/eth2-pallet-init" }
finality-update-verify = { path = "../crates/finality-update-verify" }

webb = { version = "0.5.17", features = [
    "evm-runtime",
    "substrate-runtime"
]}
webb-proposals = { version = "0.5.4" }

sp-keyring = { version = "18.0.0", default-features = false }
sp-core = { version = "16.0.0" }
log = { version = "0.4", features = ["std", "serde"] }
serde_json = "1.0.74"
serde = { version = "1.0", default-features = false, features = ["derive"] }
ethereum-types = { version = "0.14.0" }
reqwest = { version = "0.11", features = ["blocking", "json"] }
clap = { version = "3.1.6", features = ["derive"] }
tokio = { version = "1.1", features = ["macros", "rt", "time"] }
env_logger = "0.9.0"
futures = { version = "0.3.21", default-features = false }
async-std ={ version = "1.12.0", default-features = false }
async-trait = "0.1.58"
hex = "*"
toml = "0.5.9"
atomic_refcell = "0.1.8"
bitvec = "*"
primitive-types = "0.12.1"

prometheus = { version = "0.9", features = ["process"] }
lazy_static = "1.4"
warp = "0.2"
thread = "*"
