[package]
name = "pallet-eth2-light-client-relayer-gadget"
version = "0.0.1"
authors = ["Webb Developers <hello@webb.tools>"]
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
tracing = "0.1.37"
ethereum-types = { workspace = true }
subxt = { workspace = true }
tokio = { workspace = true }

# Eth2 Light Client
pallet-eth2-light-client-relayer-gadget-cli = { path = "./cli" }
eth2-to-substrate-relay = { path = "../eth2substrate-block-relay-rs" }
eth2-pallet-init = { package = "webb-eth2-pallet-init", path = "../crates/eth2-pallet-init" }

# Webb
webb-proposals = { git = "https://github.com/webb-tools/webb-rs", rev="a960eaf", features = ["scale", "evm"] }