[package]
name = "pallet-eth2-light-client-relayer-gadget"
version = "0.0.1"
authors = ["Webb Developers <hello@webb.tools>"]
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
tracing = { workspace = true }
ethereum-types = { workspace = true }
subxt = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt", "time"] }

# Eth2 Light Client
eth2-to-substrate-relay = { path = "../eth2substrate-block-relay-rs" }
eth2-pallet-init = { package = "webb-eth2-pallet-init", path = "../crates/eth2-pallet-init" }

# Webb
webb-proposals = { workspace = true, features = ["scale", "evm"] }